# comfy-bridge

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  WINDOWS-QUICKSTART.md  bridge.spec  comfy-bridge.spec  pyproject.toml  run.py  serve.py
.github/workflows/: ci.yml  release.yml
app/: _portable.py  assets.py  config.py  errors.py  gating.py  main.py  router.py
app/adapters/: __init__.py  anthropic.py  base.py  byteplus.py  gemini.py  openai.py  tripo.py
app/adapters/fal_ai/: __init__.py  (+3 more)
docs/: WINDOWS-QUICKSTART.md
linux/: bootstrap.sh  doctor.sh  healthcheck-bridge.sh  install-systemd.sh  restart-all.sh  start-bridge.sh  start-comfyui.sh  uninstall-systemd.sh  watch-bridge-log.sh
packaging/: .env.example.kit  _patch_launcher.ps1  build-kit.bat  build-kit.ps1  constraints-build.txt  install.bat  start-bridge.bat  uninstall.bat  接入说明.txt
systemd/: comfy-bridge.service  comfyui.service
tests/: conftest.py  test_adapter_anthropic.py  test_adapter_base.py  test_adapter_byteplus.py  test_adapter_fal_bytedance.py  test_adapter_gemini.py  test_adapter_openai.py  test_adapter_tripo.py  test_asset_not_found.py  test_assets.py  test_backend_dispatch.py  test_config.py  test_fal_client.py  test_fal_models.py  test_gating_cors.py  test_integration.py  test_kit_env_template.py  test_portable.py
windows/: bootstrap.ps1  build-exe.ps1  dist-README.txt  doctor.ps1  healthcheck-bridge.ps1  install-task-scheduler.ps1  restart-all.bat  run-hidden.vbs  start-bridge.bat  start-bridge.ps1  start-comfyui.bat  uninstall-task-scheduler.ps1  watch-bridge-log.bat
(+4 files in other folders)
